<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_settings">Settings</string>
    <string name="languag">EN</string>
    <string name="app_name">Wise</string>
    <string name="Hello_name">Wise Vehicle Tracker</string>
    
    <!-- 启动页面 -->
    <string name="get_service_url_wrong">Get service url error</string>
    
    <string name="copyright">Copyright by Tracknet Asia</string>
    <string name="Google">google map cannot use</string>
    <string name="Login_frist">Getting server list, pls wait</string>
    <string name="no_srevice">no server</string>
    <string name="PicNote">pic</string>
    <string name="SD_NOTFIND">SD not find</string>
    <string name="AllCarInfoActivity_login_pd_context">Signing on,pls wait.</string>
    <string name="AllCarInfoActivity_login_id_wrong">Account or password is wrong, pls retry</string>
    <string name="server_name">Server Name:</string>
    <string name="user_name_tv">Username:</string>
    <string name="PassWord_tv">Password：</string>
    <string name="check_pwd">Remember Password</string>
    <string name="tv_check_update">系统检测到有新版本，点击更新</string>
    <string name="Login_null">Account and password cannot be empty, pls retry</string>
    <string name="Note">Notice</string>
    <string name="exit_content">Confirm to exit?</string>
    <string name="monitor_car">Trace</string>
    <string name="monitor_locus">Playback</string>
    <string name="locus_dialog_start">Start Time:</string>
    <string name="locus_dialog_stop">End Time:</string>
    <string name="locas_speed">Speed</string>
    <string name="car_dialog_title">Select time period</string>
    <string name="car_dialog_ok">Query</string>
    <string name="car_dialog_et_null">Start time and end time cannot be empty</string>
    <string name="car_dialog_time_wrong">The starting time is not greater than end time</string>
    <string name="car_dialog_time_limit">The time period cannot be more than 24 hrs</string>
    <string name="time_choose">Select Time</string>
    <string name="Location_wrong">Locate an exception</string>
    <string name="allcar_config">Option</string>
    <string name="bt_updatePwd">Modify Password</string>
    <string name="Proposal">Feedback</string>
    <string name="change_map">Map: Google / Baidu</string>
    <string name="RadioButton01">Google</string>
    <string name="RadioButton02">Baidu</string>
    <string name="is_ref">Enable Auto Refresh: Yes / No</string>
    <string name="is_ref_yes">yes</string>
    <string name="is_ref_no">no</string>
    <string name="config_update_time">Refresh Interval (sec)</string>
    <string name="config_update_in_xml_ok">Save setting information successfully</string>
    <string name="bt_proposal_up">Send</string>
    <string name="bt_proposal_load">Send feedback.</string>
    <string name="proposal_up_ok">Send feedback successfully.</string>
    <string name="AllCarInfoActivity_login_net_outtime">Connection is timeout, pls retry</string>
    <string name="oldPassWord">Old Pass:</string>
    <string name="newPassWord">New Pass：</string>
    <string name="newPassWordToo">New Pass Confirm：</string>
    <string name="changePwd_title">Modify Password</string>
    <string name="change_pwd_null">Password cannot be empty, pls input.</string>
    <string name="change_pwd_TwoNewPwd_false">Password confirmation is wrong, pls input again.</string>
    <string name="change_pwd_true">Password changed successfully.</string>
    <string name="change_pwd_false">Password changed failure, pls retry.</string>
    <string name="AllCarInfoActivity_serach_pd_title">Getting data</string>
    <string name="AllCarInfoActivity_serach_pd_context">Getting data, pls wait.</string>
    <string name="AllCarInfoActivity_search_null">Data not found</string>
    <string name="total">TOTAL</string>
    <string name="alarm">Alarm</string>
    <string name="Traffic">Map</string>
    <string name="Satellite">Satellite</string>
    <string name="Location">Location get in.</string>
    <string name="AllCarInfoActivity_login_pd_title">Sign in</string>
    <string name="change_pwd_now">Changing password, pls wait.</string>
    <string name="monitor_locus_load">Getting historical data.</string>
    <string name="monitor_locus_null">Historical data is empty</string>
    <string name="accon">ACC On</string>
    <string name="accoff">ACC OFF</string>
    <string name="car_speed">Speed:</string>
    <string name="car_mileage">Odo:</string>
    <string name="car_stop">parking</string>
</resources>
